resources/datahub-gms-httpproxy.in.yaml
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: datahub-gms-httpproxy
spec:
  routes:
    - conditions:
        - prefix: /
      services:
        - name: datahub-datahub-gms
          port: 8080
  virtualhost:
    fqdn: datahub-gms-${DATAHUB_NAMESPACE}.${DATA_E2E_BASE_URL}
