resources/datahub-httpproxy.in.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: datahub-service
spec:
  type: ClusterIP
  ports:
    - port: 9002
      targetPort: 9002
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: datahub-frontend
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: datahub-httpproxy
spec:
  routes:
    - conditions:
        - prefix: /
      services:
        - name: datahub-service
          port: 9002
  virtualhost:
    fqdn: datahub-${DATAHUB_NAMESPACE}.${DATA_E2E_BASE_URL}
